# ai_agents

./: meetings_reminder.ipynb
Askmycv_agent_ai/: 02_askmycv.ipynb
Automated_Inventory_Management/: README.md
Multiworkflow/: multiworkflowtest.py
debatenb/: README.md  pyproject.toml
debatenb/output/: decide.md  oppose.md  propose.md
debatenb/src/debatenb/: crew.py  main.py
debatenb/src/debatenb/config/: agents.yaml
retail_agent_assistance/: retail_agent_system.py
stock_picker/: README.md
stock_picker/knowledge/: user_preference.txt
trip_daily_planner/: README.md
